[package]
name = "pdpw"
version = "0.7.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
age = { version = "0.11.2", features = ["async"] }
anyhow = { version = "1.0.100" }
arboard = { version = "3.6.1" }
dirs = { version = "6.0.0" }
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["fs"] }
