[package]
name = "pdpw"
version = "0.7.4"
edition = "2024"

[lints.clippy]
# Enable pedantic lints (opinionated but useful for code quality)
pedantic = "warn"

# Cherry-pick useful restriction lints (enable only what fits your project)
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
dbg_macro = "warn"

# Allow some pedantic lints that might be too strict for your codebase
# (uncomment and adjust as needed)
# needless_lifetimes = "allow"
# single_match_else = "allow"
# explicit_iter_loop = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
age = { version = "0.11.3", features = ["async"] }
anyhow = { version = "1.0.102" }
arboard = { version = "3.6.1" }
dirs = { version = "6.0.0" }
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1.52.1", features = ["fs"] }
